--- a/index.html
+++ b/index.html
@@ -1,11 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LatifisWeb</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Hola Lotf</h1>
+    <header>
+        <div class="container">
+            <h1 id="title" class="text-shadow"><span class="text-cRosa">Mi</span> Portafolios</h1>
+            <nav>
+                <div class="btn-nav">☰</div>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Sobre mi</a></li>
+                    <li><a href="#">Proyectos</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+    </header>
+    <main>
+        <section id="start">
+            <div class="container-max">
+                <h1 class="text-shadow">Bienvenido a mi mundo creativo</h1>
+                <p>Explora mis proyectos y descubre mi pasión por la creacion web y juegos.</p>
+        </section>
+        <section id="about">
+            <div class="container">
+                <h2 class="text-blue-1">Sobre mi</h2>
+                <img id="fotoPerfil" src="" alt="foto de lotfi">
+                <p>
+                    ¡Hola! Soy Lotfi Bayi, estudiante de segundo año en el ciclo superior de Diseño Web. Aunque
+                    todavía estoy en proceso de aprendizaje, tengo una gran pasión por el desarrollo web. Me
+                    encanta experimentar con nuevas tecnologías y mejorar mis habilidades cada día. Estoy
+                    emocionado por seguir creciendo y aportar ideas frescas y creativas en el mundo del diseño
+                    web.
+                </p>
+                <div class="skills">
+                    <h3>Mis habilidades</h3>
+                    <span class="skill ico-HTML">HTML</span>
+                    <span class="skill ico-CSS">CSS</span>
+                    <span class="skill ico-JS">JavaScript</span>
+                    <span class="skill ico-Bootstrap">Bootstrap</span>
+                    <span class="skill ico-PHP">PHP</span>
+                    <span class="skill ico-SQL">SQL Server</span>
+                </div>
+                <div">
+        </section>
+        <section id="projects">
+            <div class="container">
+                <h2 class="text-blue-1">Mis Proyectos</h2>
+                <div class="project">
+                    <img class="img-proyect" src="#" alt="nombreProyecto">
+                    <h3>Nombre</h3>
+                    <p class="description-main">Descripción del proyecto</p>
+                    <p class="description-plus">Detalles</p>
+                    <div class="skills">
+                        <span class="skill ico-HTML">HTML</span>
+                        <span class="skill ico-HTML">HTML</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <img class="img-proyect" src="#" alt="nombreProyecto">
+                    <h3>Nombre</h3>
+                    <p class="description-main">Descripción del proyecto</p>
+                    <p class="description-plus">Detalles</p>
+                    <div class="skills">
+                        <span class="skill ico-HTML">HTML</span>
+                        <span class="skill ico-HTML">HTML</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div id="contact" class="container">
+            <h2>Contáctame</h2>
+            <a href="#">Github</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Correo</a>
+        </div>
+    </footer>
+    </div>
 </body>
+
 </html>
