--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,<meta name=" viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"">
     <title>LatifisWeb</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <div class="container">
-            <h1 id="title" class="text-shadow"><span class="text-cRosa">Mi</span> Portafolios</h1>
+            <h1 id="title" class="text-shadow"><span class="text-cPink">Mi</span> Portafolios</h1>
             <nav>
                 <div class="btn-nav">☰</div>
                 <ul>
@@ -24,37 +26,36 @@
             </nav>
     </header>
     <main>
-        <section id="start">
+        <section id="start" class="text-cPurple">
             <div class="container-max">
                 <h1 class="text-shadow">Bienvenido a mi mundo creativo</h1>
                 <p>Explora mis proyectos y descubre mi pasión por la creacion web y juegos.</p>
         </section>
-        <section id="about">
-            <div class="container">
-                <h2 class="text-blue-1">Sobre mi</h2>
-                <img id="fotoPerfil" src="" alt="foto de lotfi">
-                <p>
-                    ¡Hola! Soy Lotfi Bayi, estudiante de segundo año en el ciclo superior de Diseño Web. Aunque
-                    todavía estoy en proceso de aprendizaje, tengo una gran pasión por el desarrollo web. Me
-                    encanta experimentar con nuevas tecnologías y mejorar mis habilidades cada día. Estoy
-                    emocionado por seguir creciendo y aportar ideas frescas y creativas en el mundo del diseño
-                    web.
-                </p>
-                <div class="skills">
-                    <h3>Mis habilidades</h3>
-                    <span class="skill ico-HTML">HTML</span>
-                    <span class="skill ico-CSS">CSS</span>
-                    <span class="skill ico-JS">JavaScript</span>
-                    <span class="skill ico-Bootstrap">Bootstrap</span>
-                    <span class="skill ico-PHP">PHP</span>
-                    <span class="skill ico-SQL">SQL Server</span>
-                </div>
+        <section id="about" class="container">
+            <h2 class="text-cPurple">Sobre mi</h2>
+            <div id="perfilImg"></div>
+            <p>
+                ¡Hola! Soy Lotfi Bayi, estudiante de segundo año en el ciclo superior de Diseño Web. Aunque
+                todavía estoy en proceso de aprendizaje, tengo una gran pasión por el desarrollo web. Me
+                encanta experimentar con nuevas tecnologías y mejorar mis habilidades cada día. Estoy
+                emocionado por seguir creciendo y aportar ideas frescas y creativas en el mundo del diseño
+                web.
+            </p>
+            <div class="skills">
+                <h3>Mis habilidades</h3>
+                <img src="img/icons/html.png" title="HTML" alt="html" class="skill">
+                <img src="img/icons/css.png" title="CSS" alt="css" class="skill">
+                <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="skill">
+                <img src="img/icons/bootstrap.png" title="Bootstrap" alt="Bootstrap" class="skill">
+                <img src="img/icons/php.png" title="PHP" alt="PHP" class="skill">
+                <img src="img/icons/sql.png" title="SQL" alt="SQL" class="skill">
                 <div">
         </section>
-        <section id="projects">
-            <div class="container">
-                <h2 class="text-blue-1">Mis Proyectos</h2>
-                <div class="project">
+
+        <section id="projects" class="container">
+            <h2 class="text-blue-1">Mis Proyectos</h2>
+            <div class="row">
+                <div class="project col-5">
                     <img class="img-proyect" src="#" alt="nombreProyecto">
                     <h3>Nombre</h3>
                     <p class="description-main">Descripción del proyecto</p>
@@ -64,7 +65,17 @@
                         <span class="skill ico-HTML">HTML</span>
                     </div>
                 </div>
-                <div class="project">
+                <div class="project col-5">
+                    <img class="img-proyect" src="#" alt="nombreProyecto">
+                    <h3>Nombre</h3>
+                    <p class="description-main">Descripción del proyecto</p>
+                    <p class="description-plus">Detalles</p>
+                    <div class="skills">
+                        <span class="skill ico-HTML">HTML</span>
+                        <span class="skill ico-HTML">HTML</span>
+                    </div>
+                </div>
+                <div class="project col-5">
                     <img class="img-proyect" src="#" alt="nombreProyecto">
                     <h3>Nombre</h3>
                     <p class="description-main">Descripción del proyecto</p>
@@ -87,5 +98,6 @@
     </footer>
     </div>
 </body>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
 </html>
