fix(index):enlaces de los proyectos;

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="project col-6">
                     <div class="container mx-auto">
                         <img class="img-proyect" src="img/proyectos/tetris.png" alt="nombreProyecto">
-                        <h3><a href="./juegos/tetris">Tetris</a></h3>
+                        <h3><a href="./juegos/tetris/index.html">Tetris</a></h3>
                         <p class="description">
                             En este proyecto, he desarrollado una versión responsive del clásico juego Tetris. Además de
                             adaptarse a diferentes tamaños de pantalla, he incorporado nuevas funcionalidades como la
@@ -77,7 +77,7 @@
                 <div class="project col-6">
                     <div class="container mx-auto">
                         <img class="img-proyect" src="img/proyectos/numPuz.png" alt="nombreProyecto">
-                        <h3><a href="./juegos/numpuz/">NumPuz</a></h3>
+                        <h3><a href="./juegos/numPuz/index.html">NumPuz</a></h3>
                         <p class="description">En este proyecto, implementé el clásico juego NumPuz, tratando cada pieza
                             del rompecabezas como un objeto independiente. Este enfoque me permitió profundizar en los
                             principios de encapsulación y, al mismo tiempo, dificultar la manipulación no deseada del
