fix(numPuz): Se soluciono el error del cronometro , el error que permite mover las piezas despues de ganar  y el error de cambiar el tablero despues de ganar

--- a/juegos/tetris/index.html
+++ b/juegos/tetris/index.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div class="caja contenedor led" id="Guardar">
-                        <h3>Pieza Guardada</h3>
+                        <h3>Guardada</h3>
                         <div id="memoria" class="almacen">
 
                         </div>
