flix(numPuz): Se adapto mejor el juego en moviles

--- a/juegos/numPuz/index.html
+++ b/juegos/numPuz/index.html
@@ -26,12 +26,12 @@
         <div id="info">Tiempo <span id="tiempo1">00:00</span><button id="reordenar"><img src="reintentar.svg"></button></div>
     </div>
     <div id="victoria">
-        <h1>Ganaste 👏😁👍 !!!</h1>
-        <p><strong>A que fue facil?</strong></p>
-        <p><strong>Numero de movimientos:</strong><span id="numMovimientos">0</span></p>
-        <p><strong>Tiempo:</strong><span id="tiempo2">00:00</span></p>
-        <button id="reiniciar"> Jugar de nuevo</button>
-
+        <div class="contenedor">
+            <h1>Ganaste 👏😁👍 !!!</h1>
+            <p><strong>Numero de movimientos:</strong><span id="numMovimientos">0</span></p>
+            <p><strong>Tiempo:</strong><span id="tiempo2">00:00</span></p>
+            <button id="reiniciar"> Jugar de nuevo</button>
+        </div>
     </div>
 </body>
 
