--- a/miniProyectos/cuestionariosTipoTest/index.html
+++ b/miniProyectos/cuestionariosTipoTest/index.html
@@ -3,13 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Preguntas</title>
     <link rel="stylesheet" href="stylesCuestionario.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script type="module" src="portafolio\miniProyectos\cuestionariosTipoTest\mainCuestionario.js"></script>
-  
-    <title>Preguntas</title>
+    <script type="module" src="mainCuestionario.js"></script>
 </head>
 
 <body>
