try(cuestionario): Error con los nombres de archivos

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="project col-6">
                     <div class="container mx-auto">
                         <img class="img-proyect" src="img/proyectos/cuestionario.png" alt="nombreProyecto">
-                        <h3><a href=".\miniProyectos\cuestionariosTipoTest">Creador de cuestionarios</a></h3>
+                        <h3><a href="./miniProyectos/cuestionariosTipoTest">Creador de cuestionarios</a></h3>
                         <p class="description">Cuando me preparo para un examen, siempre realizo una revisión final
                             utilizando cuestionarios. Sin embargo, he notado que las páginas web que suelo usar están
                             saturadas de anuncios, lo cual resulta muy distractor.
