--- a/index.html
+++ b/index.html
@@ -109,17 +109,13 @@
                     <div class="container mx-auto">
                         <img class="img-proyect" src="img/proyectos/cuestionario.png" alt="nombreProyecto">
                         <h3><a href="./miniProyectos/cuestionariosTipoTest/index.html">Creador de cuestionarios</a></h3>
-                        <p class="description">Cuando me preparo para un examen, siempre realizo una revisión final
-                            utilizando cuestionarios. Sin embargo, he notado que las páginas web que suelo usar están
-                            saturadas de anuncios, lo cual resulta muy distractor.
-                            Por esta razón, decidí crear mi propia herramienta de estudio. Esta aplicación incluye todas
-                            las funcionalidades necesarias, como crear , editar , eliminar , exportar , importar e imprimir examenes.
-                        </p>
-                        <p class="resumen">Creador de examenes de tipo test con funcionalidades necesarias, como crear , editar , eliminar , exportar , importar e imprimir examenes.</p>
+                        <p class="description">Este proyecto lo hice con la intención de usarlo para preparar mis próximos exámenes, le añadí todas las funcionalidades para hacer que el uso de la web sea más cómoda como la capacidad de editar, eliminar y compartir un examen.</p>
+                        <p class="resumen">Creador de exámenes de tipo test con funcionalidades necesarias, como crear, editar, eliminar, exportar, importar e imprimir exámenes.</p>
                         <div class="skills">
                             <img src="img/icons/html.png" title="HTML" alt="html" class="icono">
                             <img src="img/icons/js.png" title="JavaScript" alt="javaScript" class="icono">
                             <img src="img/icons/css.png" title="CSS" alt="css" class="icono">
+                            <img src="img/icons/bootstrap.png" title="Bootstrap" alt="Bootstrap" class="icono">
                         </div>
                     </div>
                 </div>
