fix(index): Arreglo en la resolucion de las imagenes.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="project col-6">
                     <div class="container mx-auto">
-                        <img class="img-proyect" src="img/proyectos/tetris.png" alt="nombreProyecto">
+                        <img class="img-proyect" src="img/proyectos/tetris.jpeg" alt="nombreProyecto">
                         <h3><a href="./juegos/tetris/index.html">Tetris</a></h3>
                         <p class="description">
                             En este proyecto, he desarrollado una versión responsive del clásico juego Tetris. Además de
@@ -76,7 +76,7 @@
                 </div>
                 <div class="project col-6">
                     <div class="container mx-auto">
-                        <img class="img-proyect" src="img/proyectos/numPuz.png" alt="nombreProyecto">
+                        <img class="img-proyect" src="img/proyectos/numPuz.jpeg" alt="nombreProyecto">
                         <h3><a href="./juegos/numPuz/index.html">NumPuz</a></h3>
                         <p class="description">En este proyecto, implementé el clásico juego NumPuz, tratando cada pieza
                             del rompecabezas como un objeto independiente. Este enfoque me permitió profundizar en los
@@ -92,7 +92,7 @@
                 </div>
                 <div class="project col-6">
                     <div class="container mx-auto">
-                        <img class="img-proyect" src="img/proyectos/cartas.png" alt="nombreProyecto">
+                        <img class="img-proyect" src="img/proyectos/cartas.jpeg" alt="nombreProyecto">
                         <h3><a href="./juegos/e06cartas/">Juego de memoria</a></h3>
                         <p class="description">Este juego de memoria trata cada carta como un objeto individual, lo que
                             facilita la creación de animaciones personalizadas y evita que el usuario pueda ver el
@@ -107,9 +107,7 @@
                 </div>
                 <div class="project col-6">
                     <div class="container mx-auto">
-                        <div class="ocuparEspacio">
-                            <img class="img-proyect" src="img/proyectos/cuestionario.png" alt="nombreProyecto">
-                        </div>
+                        <img class="img-proyect" src="img/proyectos/cuestionario.jpeg" alt="nombreProyecto">
                         <h3><a href="./miniProyectos/cuestionariosTipoTest/index.html">Creador de cuestionarios</a></h3>
                         <p class="description">Este proyecto lo hice con la intención de usarlo para preparar mis próximos exámenes, le añadí todas las funcionalidades para hacer que el uso de la web sea más cómoda como la capacidad de editar, eliminar y compartir un examen.</p>
                         <p class="resumen">Creador de exámenes de tipo test con funcionalidades necesarias, como crear, editar, eliminar, exportar, importar e imprimir exámenes.</p>
