fix(indes): Se cambio la resolucion de cuestionario

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="project col-6">
                     <div class="container mx-auto">
-                        <img class="img-proyect" src="img/proyectos/cuestionario.jpeg" alt="nombreProyecto">
+                        <img class="img-proyect" src="img/proyectos/cuestionario.png" alt="nombreProyecto">
                         <h3><a href="./miniProyectos/cuestionariosTipoTest/index.html">Creador de cuestionarios</a></h3>
                         <p class="description">Este proyecto lo hice con la intención de usarlo para preparar mis próximos exámenes, le añadí todas las funcionalidades para hacer que el uso de la web sea más cómoda como la capacidad de editar, eliminar y compartir un examen.</p>
                         <p class="resumen">Creador de exámenes de tipo test con funcionalidades necesarias, como crear, editar, eliminar, exportar, importar e imprimir exámenes.</p>
